Issue #18619: Fix atexit leaking callbacks registered from sub-interpreters, and make it GC-aware.